# simd_algorithms

./: CMakeLists.txt  README.md  simd_compare.h
binary_search/: CMakeLists.txt  bench.cpp  binary_search.h
bubble_sort/: CMakeLists.txt  bench.cpp  bubble_sort.h
nway_tree/: CMakeLists.txt  bench.cpp  nway_tree.h
test/: CMakeLists.txt
test/simdtest/: CMakeLists.txt  simd_compare_test.cpp
to_lower/: CMakeLists.txt  bench.cpp  do_nothing.cpp  to_lower.h
